--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 <!-- Portrait -->
                 <div class="gallery-item portrait" data-category="portrait">
                     <div class="relative overflow-hidden rounded-lg h-64">
-                        <img src="https://images.unsplash.com/photo-1519225421980-715cb0215aed?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80" 
+                        <img src="images/show1.jpg" 
                              alt="Portrait photography" 
                              class="w-full h-full object-cover cursor-pointer"
                              onclick="openLightbox(this)">
@@ -301,7 +301,7 @@
                 <!-- Commercial -->
                 <div class="gallery-item commercial" data-category="commercial">
                     <div class="relative overflow-hidden rounded-lg h-64">
-                        <img src="https://images.unsplash.com/photo-1492684223066-81342ee5ff30?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80" 
+                        <img src="images/show4.jpg" 
                              alt="Commercial photography" 
                              class="w-full h-full object-cover cursor-pointer"
                              onclick="openLightbox(this)">
@@ -327,7 +327,7 @@
                 <!-- Portrait -->
                 <div class="gallery-item portrait" data-category="portrait">
                     <div class="relative overflow-hidden rounded-lg h-64">
-                        <img src="https://images.unsplash.com/photo-1519225421980-715cb0215aed?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1740&q=80" 
+                        <img src="images/show7.jpg" 
                              alt="Portrait photography" 
                              class="w-full h-full object-cover cursor-pointer"
                              onclick="openLightbox(this)">
