--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 </div>
                 <div class="hidden md:flex space-x-8">
                     <a href="#home" class="hover:text-[var(--primary-color)] transition">Home</a>
-                    <a href="#portfolio" class="hover:text-[var(--primary-color)] transition">Portfolio</a>
+                    <a href="gallery.html" class="hover:text-[var(--primary-color)] transition">Gallery</a>
                     <a href="#about" class="hover:text-[var(--primary-color)] transition">About</a>
                     <a href="#services" class="hover:text-[var(--primary-color)] transition">Services</a>
                     <a href="#testimonials" class="hover:text-[var(--primary-color)] transition">Testimonials</a>
@@ -252,7 +252,11 @@
             <div class="flex justify-center mb-12 flex-wrap">
                 <button class="filter-btn active px-4 py-2 mx-2 mb-2 rounded-full bg-[var(--primary-color)] text-black font-medium" data-filter="all">All</button>
                 <button class="filter-btn px-4 py-2 mx-2 mb-2 rounded-full bg-gray-700 hover:bg-[var(--primary-color)] hover:text-black transition font-medium" data-filter="wedding">Wedding</button>
-                <button class="filter-btn px-4 py-2 mx-2 mb-2 rounded-full bg-gray-700 hover:bg-[var(--primary-color)] hover:text-black transition font-medium" data-filter="portrait">Portrait</button>
+                <a href="gallery.html">
+  <button class="filter-btn px-4 py-2 mx-2 mb-2 rounded-full bg-gray-700 hover:bg-[var(--primary-color)] hover:text-black transition font-medium">
+    Portrait
+  </button>
+</a>
                 <button class="filter-btn px-4 py-2 mx-2 mb-2 rounded-full bg-gray-700 hover:bg-[var(--primary-color)] hover:text-black transition font-medium" data-filter="event">Event</button>
                 <button class="filter-btn px-4 py-2 mx-2 mb-2 rounded-full bg-gray-700 hover:bg-[var(--primary-color)] hover:text-black transition font-medium" data-filter="commercial">Commercial</button>
             </div>
@@ -339,7 +343,7 @@
             </div>
             
             <div class="text-center mt-12">
-                <a href="#" class="inline-block border-2 border-white hover:border-[var(--primary-color)] hover:text-[var(--primary-color)] font-bold py-3 px-8 rounded-full transition">View Full Portfolio</a>
+                <a href="gallery.html" class="inline-block border-2 border-white hover:border-[var(--primary-color)] hover:text-[var(--primary-color)] font-bold py-3 px-8 rounded-full transition">View Full Portfolio</a>
             </div>
         </div>
     </section>
