--- a/gallery.html
+++ b/gallery.html
@@ -200,7 +200,7 @@
     </ul>
   </div>
 
-  <!-- Page Title Section (spaced below nav) -->
+  <!-- Page Title Section -->
   <section class="mt-24 text-center py-12">
     <h1 class="text-4xl font-bold text-[var(--primary-color)]">Gallery</h1>
     <p class="mt-2 text-gray-300">Explore our moments of creativity and passion</p>
@@ -209,21 +209,21 @@
   <!-- Hero Slideshow -->
   <div class="carousel-container">
     <div id="carousel">
-      <img src="images/IX3A0008 copy.jpg" class="carousel-slide" alt="Slide 1" loading="lazy">
-      <img src="images/IX3A0010 copy.jpg" class="carousel-slide" alt="Slide 2" loading="lazy">
-      <img src="images/IX3A0026 copy.jpg" class="carousel-slide" alt="Slide 3" loading="lazy">
-      <img src="images/IX3A0032 copy.jpg" class="carousel-slide" alt="Slide 4" loading="lazy">
-      <img src="images/IX3A0060 copy.jpg" class="carousel-slide" alt="Slide 5" loading="lazy">
-      <img src="images/IX3A0063 copy.jpg" class="carousel-slide" alt="Slide 1" loading="lazy">
-      <img src="images/IX3A0067 copy.jpg" class="carousel-slide" alt="Slide 2" loading="lazy">
-      <img src="images/IX3A0079 copy.jpg" class="carousel-slide" alt="Slide 3" loading="lazy">
-      <img src="images/IX3A0104-Recovered.jpg" class="carousel-slide" alt="Slide 4" loading="lazy">
-      <img src="images/IX3A0116 0copy.jpg" class="carousel-slide" alt="Slide 5" loading="lazy">
-      <img src="images/IX3A0118 copy.jpg" class="carousel-slide" alt="Slide 1" loading="lazy">
-      <img src="images/IX3A0141 copy.jpg" class="carousel-slide" alt="Slide 2" loading="lazy">
-      <img src="images/IX3A0147 copy.jpg" class="carousel-slide" alt="Slide 3" loading="lazy">
-      <img src="images/IX3A0220 copy.jpg" class="carousel-slide" alt="Slide 4" loading="lazy">
-      <img src="images/IX3A0224 copy.jpg" class="carousel-slide" alt="Slide 5" loading="lazy">
+      <img src="images/IX3A0008 copy.jpg" class="carousel-slide" alt="Slide 1">
+      <img src="images/IX3A0010 copy.jpg" class="carousel-slide" alt="Slide 2">
+      <img src="images/IX3A0026 copy.jpg" class="carousel-slide" alt="Slide 3">
+      <img src="images/IX3A0032 copy.jpg" class="carousel-slide" alt="Slide 4">
+      <img src="images/IX3A0060 copy.jpg" class="carousel-slide" alt="Slide 5">
+      <img src="images/IX3A0063 copy.jpg" class="carousel-slide" alt="Slide 1">
+      <img src="images/IX3A0067 copy.jpg" class="carousel-slide" alt="Slide 2">
+      <img src="images/IX3A0079 copy.jpg" class="carousel-slide" alt="Slide 3">
+      <img src="images/IX3A0104-Recovered.jpg" class="carousel-slide" alt="Slide 4">
+      <img src="images/IX3A0116 0copy.jpg" class="carousel-slide" alt="Slide 5">
+      <img src="images/IX3A0118 copy.jpg" class="carousel-slide" alt="Slide 1">
+      <img src="images/IX3A0141 copy.jpg" class="carousel-slide" alt="Slide 2">
+      <img src="images/IX3A0147 copy.jpg" class="carousel-slide" alt="Slide 3">
+      <img src="images/IX3A0220 copy.jpg" class="carousel-slide" alt="Slide 4">
+      <img src="images/IX3A0224 copy.jpg" class="carousel-slide" alt="Slide 5">
     </div>
     <div class="carousel-controls">
       <button id="prev-btn" class="prev-btn">Prev</button>
@@ -234,35 +234,35 @@
   <!-- Grid Gallery Slideshow -->
   <div class="grid-carousel-container">
     <div id="grid-carousel">
-      <div class="grid-slide"><img src="images/show1.jpg" alt="Gallery Slide 1" loading="lazy"></div>
-      <div class="grid-slide"><img src="images/show2.jpg" alt="Gallery Slide 2" loading="lazy"></div>
-      <div class="grid-slide"><img src="images/show3.jpg" alt="Gallery Slide 3" loading="lazy"></div>
-      <div class="grid-slide"><img src="images/show4.jpg" alt="Gallery Slide 4" loading="lazy"></div>
-      <div class="grid-slide"><img src="images/show5.jpg" alt="Gallery Slide 5" loading="lazy"></div>
-      <div class="grid-slide"><img src="images/show6.jpg" alt="Gallery Slide 6" loading="lazy"></div>
-      <div class="grid-slide"><img src="images/baby (1).jpg" alt="Gallery Slide 2" loading="lazy"></div>
-      <div class="grid-slide"><img src="images/baby (2).jpg" alt="Gallery Slide 3" loading="lazy"></div>
-      <div class="grid-slide"><img src="images/baby (3).jpg" alt="Gallery Slide 4" loading="lazy"></div>
-      <div class="grid-slide"><img src="images/baby (4).jpg" alt="Gallery Slide 5" loading="lazy"></div>
-      <div class="grid-slide"><img src="images/baby (5).jpg" alt="Gallery Slide 6" loading="lazy"></div>
+      <div class="grid-slide"><img src="images/show1.jpg" alt="Gallery Slide 1"></div>
+      <div class="grid-slide"><img src="images/show2.jpg" alt="Gallery Slide 2"></div>
+      <div class="grid-slide"><img src="images/show3.jpg" alt="Gallery Slide 3"></div>
+      <div class="grid-slide"><img src="images/show4.jpg" alt="Gallery Slide 4"></div>
+      <div class="grid-slide"><img src="images/show5.jpg" alt="Gallery Slide 5"></div>
+      <div class="grid-slide"><img src="images/show6.jpg" alt="Gallery Slide 6"></div>
+      <div class="grid-slide"><img src="images/baby (1).jpg" alt="Gallery Slide 2"></div>
+      <div class="grid-slide"><img src="images/baby (2).jpg" alt="Gallery Slide 3"></div>
+      <div class="grid-slide"><img src="images/baby (3).jpg" alt="Gallery Slide 4"></div>
+      <div class="grid-slide"><img src="images/baby (4).jpg" alt="Gallery Slide 5"></div>
+      <div class="grid-slide"><img src="images/baby (5).jpg" alt="Gallery Slide 6"></div>
     </div>
   </div>
 
   <!-- Portrait Gallery Slideshow -->
   <div id="portrait-gallery" class="portrait-carousel-container">
     <div id="portrait-carousel">
-      <div class="portrait-slide"><img src="images/port1.jpg" alt="Portrait 1" loading="lazy"></div>
-      <div class="portrait-slide"><img src="images/port2.jpg" alt="Portrait 2" loading="lazy"></div>
-      <div class="portrait-slide"><img src="images/port3.jpg" alt="Portrait 3" loading="lazy"></div>
-      <div class="portrait-slide"><img src="images/port4.jpg" alt="Portrait 4" loading="lazy"></div>
-      <div class="portrait-slide"><img src="images/potnew (1).jpg" alt="Portrait 1" loading="lazy"></div>
-      <div class="portrait-slide"><img src="images/potnew (2).jpg" alt="Portrait 2" loading="lazy"></div>
-      <div class="portrait-slide"><img src="images/potnew (3).jpg" alt="Portrait 3" loading="lazy"></div>
-      <div class="portrait-slide"><img src="images/potnew (4).jpg" alt="Portrait 4" loading="lazy"></div>
-      <div class="portrait-slide"><img src="images/potnew (5).jpg" alt="Portrait 1" loading="lazy"></div>
-      <div class="portrait-slide"><img src="images/potnew (6).jpg" alt="Portrait 2" loading="lazy"></div>
-      <div class="portrait-slide"><img src="images/potnew (7).jpg" alt="Portrait 3" loading="lazy"></div>
-      <div class="portrait-slide"><img src="images/potnew (8).jpg" alt="Portrait 4" loading="lazy"></div>
+      <div class="portrait-slide"><img src="images/port1.jpg" alt="Portrait 1"></div>
+      <div class="portrait-slide"><img src="images/port2.jpg" alt="Portrait 2"></div>
+      <div class="portrait-slide"><img src="images/port3.jpg" alt="Portrait 3"></div>
+      <div class="portrait-slide"><img src="images/port4.jpg" alt="Portrait 4"></div>
+      <div class="portrait-slide"><img src="images/potnew (1).jpg" alt="Portrait 1"></div>
+      <div class="portrait-slide"><img src="images/potnew (2).jpg" alt="Portrait 2"></div>
+      <div class="portrait-slide"><img src="images/potnew (3).jpg" alt="Portrait 3"></div>
+      <div class="portrait-slide"><img src="images/potnew (4).jpg" alt="Portrait 4"></div>
+      <div class="portrait-slide"><img src="images/potnew (5).jpg" alt="Portrait 1"></div>
+      <div class="portrait-slide"><img src="images/potnew (6).jpg" alt="Portrait 2"></div>
+      <div class="portrait-slide"><img src="images/potnew (7).jpg" alt="Portrait 3"></div>
+      <div class="portrait-slide"><img src="images/potnew (8).jpg" alt="Portrait 4"></div>
     </div>
   </div>
 
@@ -285,109 +285,116 @@
       <span class="text-[var(--primary-color)]">BLESS</span>AFRICA
     </p>
     <div class="flex justify-center space-x-6 mb-4">
-      <a href="#" class="text-[var(--primary-color)] text-xl hover:text-white"><i class="fab fa-instagram"></i></a>
-      <a href="#" class="text-[var(--primary-color)] text-xl hover:text-white"><i class="fab fa-facebook"></i></a>
-      <a href="#" class="text-[var(--primary-color)] text-xl hover:text-white"><i class="fab fa-whatsapp"></i></a>
-      <a href="#" class="text-[var(--primary-color)] text-xl hover:text-white"><i class="fab fa-tiktok"></i></a>
+      <a href="https://www.instagram.com/blessafrica.studio/" class="text-[var(--primary-color)] hover:text-white text-lg sm:text-xl transition">
+                    <i class="fab fa-instagram"></i>
+                </a>
+                <a href="https://www.facebook.com/Bless.Africa.4109/" class="text-[var(--primary-color)] hover:text-white text-lg sm:text-xl transition">
+                    <i class="fab fa-facebook"></i>
+                </a>
+                <a href="https://wa.me/27664211110" class="text-[var(--primary-color)] hover:text-white text-lg sm:text-xl transition">
+                    <i class="fab fa-whatsapp"></i>
+                </a>
+                <a href="https://www.tiktok.com/@blessafrica.studi" class="text-[var(--primary-color)] hover:text-white text-lg sm:text-xl transition">
+                    <i class="fab fa-tiktok"></i>
+                </a>
     </div>
     <p class="text-sm">&copy; 2025 Bless Africa. All rights reserved.</p>
   </footer>
 
   <!-- Scripts -->
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-  AOS.init({ duration: 800, once: true });
+  <script>
+    AOS.init({ duration: 800, once: true });
 
-  document.addEventListener("DOMContentLoaded", function () {
-    // Helper for autoplay only when in view
-    const observeAndAnimate = (containerId, intervalMs) => {
-      const container = document.getElementById(containerId);
-      let index = 0;
-      const total = container.children.length;
-      let intervalId = null;
+    document.addEventListener("DOMContentLoaded", function () {
+      // Helper for autoplay only when in view
+      const observeAndAnimate = (containerId, intervalMs) => {
+        const container = document.getElementById(containerId);
+        let index = 0;
+        const total = container.children.length;
+        let intervalId = null;
 
-      const observer = new IntersectionObserver(entries => {
-        entries.forEach(entry => {
-          if (entry.isIntersecting) {
-            if (!intervalId) {
-              intervalId = setInterval(() => {
-                let visible = 1;
-                if (containerId === 'grid-carousel') {
-                  visible = window.innerWidth >= 1024 ? 3 : 1;
-                } else if (containerId === 'portrait-carousel') {
-                  visible = window.innerWidth >= 1024 ? 4 : 1;
-                }
+        const observer = new IntersectionObserver(entries => {
+          entries.forEach(entry => {
+            if (entry.isIntersecting) {
+              if (!intervalId) {
+                intervalId = setInterval(() => {
+                  let visible = 1;
+                  if (containerId === 'grid-carousel') {
+                    visible = window.innerWidth >= 1024 ? 3 : 1;
+                  } else if (containerId === 'portrait-carousel') {
+                    visible = window.innerWidth >= 1024 ? 4 : 1;
+                  }
 
-                index = (index + 1) % (total - (visible - 1));
-                container.style.transform = `translateX(-${index * (100 / visible)}%)`;
-              }, intervalMs);
+                  index = (index + 1) % (total - (visible - 1));
+                  container.style.transform = `translateX(-${index * (100 / visible)}%)`;
+                }, intervalMs);
+              }
+            } else {
+              if (intervalId) {
+                clearInterval(intervalId);
+                intervalId = null;
+              }
             }
-          } else {
-            if (intervalId) {
-              clearInterval(intervalId);
-              intervalId = null;
-            }
-          }
-        });
-      }, { threshold: 0.3 });
+          });
+        }, { threshold: 0.3 });
 
-      observer.observe(container.parentElement);
-    };
+        observer.observe(container.parentElement);
+      };
 
-    // Initialize observers for all carousels
-    observeAndAnimate('carousel', 4000);
-    observeAndAnimate('grid-carousel', 4500);
-    observeAndAnimate('portrait-carousel', 4800);
+      // Initialize observers for all carousels
+      observeAndAnimate('carousel', 4000);
+      observeAndAnimate('grid-carousel', 4500);
+      observeAndAnimate('portrait-carousel', 4800);
 
-    // Manual carousel navigation
-    const carousel = document.getElementById('carousel');
-    const totalSlides = carousel.children.length;
-    let slideIndex = 0;
+      // Manual carousel navigation
+      const carousel = document.getElementById('carousel');
+      const totalSlides = carousel.children.length;
+      let slideIndex = 0;
 
-    document.getElementById('prev-btn').addEventListener('click', () => {
-      slideIndex = (slideIndex - 1 + totalSlides) % totalSlides;
-      carousel.style.transform = `translateX(-${slideIndex * 100}%)`;
-    });
+      document.getElementById('prev-btn').addEventListener('click', () => {
+        slideIndex = (slideIndex - 1 + totalSlides) % totalSlides;
+        carousel.style.transform = `translateX(-${slideIndex * 100}%)`;
+      });
 
-    document.getElementById('next-btn').addEventListener('click', () => {
-      slideIndex = (slideIndex + 1) % totalSlides;
-      carousel.style.transform = `translateX(-${slideIndex * 100}%)`;
-    });
+      document.getElementById('next-btn').addEventListener('click', () => {
+        slideIndex = (slideIndex + 1) % totalSlides;
+        carousel.style.transform = `translateX(-${slideIndex * 100}%)`;
+      });
 
-    // Mobile menu toggle
-    const menuBtn = document.getElementById('menu-btn');
-    const mobileMenu = document.getElementById('mobile-menu');
-    const backdrop = document.getElementById('mobile-menu-backdrop');
-    const closeBtn = document.getElementById('mobile-menu-close');
+      // Mobile menu toggle
+      const menuBtn = document.getElementById('menu-btn');
+      const mobileMenu = document.getElementById('mobile-menu');
+      const backdrop = document.getElementById('mobile-menu-backdrop');
+      const closeBtn = document.getElementById('mobile-menu-close');
 
-    menuBtn.addEventListener('click', () => {
-      mobileMenu.classList.add('active');
-      backdrop.style.display = 'block';
-      document.body.style.overflow = 'hidden';
-    });
+      menuBtn.addEventListener('click', () => {
+        mobileMenu.classList.add('active');
+        backdrop.style.display = 'block';
+        document.body.style.overflow = 'hidden';
+      });
 
-    closeBtn.addEventListener('click', () => {
-      mobileMenu.classList.remove('active');
-      backdrop.style.display = 'none';
-      document.body.style.overflow = 'auto';
-    });
-
-    backdrop.addEventListener('click', () => {
-      mobileMenu.classList.remove('active');
-      backdrop.style.display = 'none';
-      document.body.style.overflow = 'auto';
-    });
-
-    document.querySelectorAll('.mobile-menu a').forEach(link => {
-      link.addEventListener('click', () => {
+      closeBtn.addEventListener('click', () => {
         mobileMenu.classList.remove('active');
         backdrop.style.display = 'none';
         document.body.style.overflow = 'auto';
       });
+
+      backdrop.addEventListener('click', () => {
+        mobileMenu.classList.remove('active');
+        backdrop.style.display = 'none';
+        document.body.style.overflow = 'auto';
+      });
+
+      document.querySelectorAll('.mobile-menu a').forEach(link => {
+        link.addEventListener('click', () => {
+          mobileMenu.classList.remove('active');
+          backdrop.style.display = 'none';
+          document.body.style.overflow = 'auto';
+        });
+      });
     });
-  });
-</script>
+  </script>
 
 </body>
 </html>
