--- a/gallery.html
+++ b/gallery.html
@@ -579,16 +579,16 @@
                 <span class="text-[var(--primary-color)]">BLESS</span>AFRICA
             </p>
             <div class="flex justify-center space-x-8 mb-6">
-                <a href="#" class="text-xl text-gray-400 hover:text-[var(--primary-color)] social-icon">
+                <a href="https://www.instagram.com/blessafrica.studio/" class="text-[var(--primary-color)] hover:text-white text-lg sm:text-xl transition">
                     <i class="fab fa-instagram"></i>
                 </a>
-                <a href="#" class="text-xl text-gray-400 hover:text-[var(--primary-color)] social-icon">
+                <a href="https://www.facebook.com/Bless.Africa.4109/" class="text-[var(--primary-color)] hover:text-white text-lg sm:text-xl transition">
                     <i class="fab fa-facebook"></i>
                 </a>
-                <a href="#" class="text-xl text-gray-400 hover:text-[var(--primary-color)] social-icon">
+                <a href="https://wa.me/27664211110" class="text-[var(--primary-color)] hover:text-white text-lg sm:text-xl transition">
                     <i class="fab fa-whatsapp"></i>
                 </a>
-                <a href="#" class="text-xl text-gray-400 hover:text-[var(--primary-color)] social-icon">
+                <a href="https://www.tiktok.com/@blessafrica.studi" class="text-[var(--primary-color)] hover:text-white text-lg sm:text-xl transition">
                     <i class="fab fa-tiktok"></i>
                 </a>
             </div>
