--- a/gallery.html
+++ b/gallery.html
@@ -299,29 +299,73 @@
         .nav-link:hover:after {
             width: 100%;
         }
+
+        .mobile-menu {
+    display: none;
+    position: absolute;
+    right: 0;
+    top: 100%;
+    width: 200px;
+    background-color: #000;
+    background-opacity: 0.9;
+    backdrop-filter: blur(10px);
+    border-radius: 8px;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
+    z-index: 100;
+}
+
+.mobile-menu.active {
+    display: block;
+}
+
+.mobile-menu-backdrop {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 50;
+}
     </style>
 </head>
 <body class="bg-gray-900 text-white">
     <!-- Fixed Navbar -->
-    <nav class="fixed top-0 left-0 w-full z-50 bg-black bg-opacity-90 backdrop-blur-sm">
-        <div class="container mx-auto px-4 py-3 flex justify-between items-center">
-            <a href="index.html" class="flex items-center space-x-2">
-                <img src="images/logo.jpg" alt="Bless Africa Logo" class="h-10 w-10 rounded-full object-cover">
-                <span class="text-xl font-bold text-white logo-text"><span class="text-[var(--primary-color)]">BLESS</span>AFRICA</span>
-            </a>
-            <div class="hidden md:flex space-x-6 text-white">
-                <a href="index.html" class="nav-link hover:text-[var(--primary-color)] transition">Home</a>
-                <a href="#grid-gallery" class="nav-link hover:text-[var(--primary-color)] transition">Gallery</a>
-                <a href="#portrait-gallery" class="nav-link hover:text-[var(--primary-color)] transition">Portraits</a>
-                <a href="#contact" class="nav-link hover:text-[var(--primary-color)] transition">Contact</a>
-            </div>
-            <div class="md:hidden">
-                <button id="menu-btn" class="text-white text-2xl focus:outline-none">
-                    <i class="fas fa-bars"></i>
-                </button>
+   <nav class="fixed top-0 left-0 w-full z-50 bg-black bg-opacity-90 backdrop-blur-sm">
+    <div class="container mx-auto px-4 py-3 flex justify-between items-center">
+        <a href="index.html" class="flex items-center space-x-2">
+            <img src="images/logo.jpg" alt="Bless Africa Logo" class="h-10 w-10 rounded-full object-cover">
+            <span class="text-xl font-bold text-white logo-text"><span class="text-[var(--primary-color)]">BLESS</span>AFRICA</span>
+        </a>
+        <div class="hidden md:flex space-x-6 text-white">
+            <a href="index.html" class="nav-link hover:text-[var(--primary-color)] transition">Home</a>
+            <a href="#grid-gallery" class="nav-link hover:text-[var(--primary-color)] transition">Gallery</a>
+            <a href="#portrait-gallery" class="nav-link hover:text-[var(--primary-color)] transition">Portraits</a>
+            <a href="#contact" class="nav-link hover:text-[var(--primary-color)] transition">Contact</a>
+        </div>
+        <div class="md:hidden relative">
+            <button id="menu-btn" class="text-white text-2xl focus:outline-none">
+                <i class="fas fa-bars"></i>
+            </button>
+            <!-- Mobile Menu -->
+            <div id="mobile-menu" class="mobile-menu absolute right-0 top-full mt-2 w-56 bg-black bg-opacity-90 backdrop-blur-sm rounded-lg shadow-lg">
+                <div class="text-right p-4">
+                    <button id="mobile-menu-close" class="text-white text-2xl focus:outline-none">
+                        <i class="fas fa-times"></i>
+                    </button>
+                </div>
+                <ul class="mt-8 space-y-6 text-white text-lg pl-4">
+                    <li><a href="#hero" class="block py-2 hover:text-[var(--primary-color)] transition">Home</a></li>
+                    <li><a href="#featured" class="block py-2 hover:text-[var(--primary-color)] transition">Featured</a></li>
+                    <li><a href="#grid-gallery" class="block py-2 hover:text-[var(--primary-color)] transition">Gallery</a></li>
+                    <li><a href="#portrait-gallery" class="block py-2 hover:text-[var(--primary-color)] transition">Portraits</a></li>
+                    <li><a href="#contact" class="block py-2 hover:text-[var(--primary-color)] transition">Contact</a></li>
+                </ul>
             </div>
         </div>
-    </nav>
+    </div>
+</nav>
     <!-- Mobile Menu Backdrop -->
     <div class="mobile-menu-backdrop" id="mobile-menu-backdrop"></div>
     <!-- Mobile Slide-in Menu -->
