--- a/gallery.html
+++ b/gallery.html
@@ -301,76 +301,49 @@
         }
 
         .mobile-menu {
-    display: none;
-    position: absolute;
-    right: 0;
-    top: 100%;
-    width: 200px;
-    background-color: #000;
-    background-opacity: 0.9;
-    backdrop-filter: blur(10px);
-    border-radius: 8px;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
-    z-index: 100;
-}
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #000;
+            background-opacity: 0.9;
+            backdrop-filter: blur(10px);
+            z-index: 100;
+            overflow-y: auto;
+        }
 
-.mobile-menu.active {
-    display: block;
-}
-
-.mobile-menu-backdrop {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 50;
-}
+        .mobile-menu.active {
+            display: block;
+        }
     </style>
 </head>
 <body class="bg-gray-900 text-white">
     <!-- Fixed Navbar -->
-   <nav class="fixed top-0 left-0 w-full z-50 bg-black bg-opacity-90 backdrop-blur-sm">
-    <div class="container mx-auto px-4 py-3 flex justify-between items-center">
-        <a href="index.html" class="flex items-center space-x-2">
-            <img src="images/logo.jpg" alt="Bless Africa Logo" class="h-10 w-10 rounded-full object-cover">
-            <span class="text-xl font-bold text-white logo-text"><span class="text-[var(--primary-color)]">BLESS</span>AFRICA</span>
-        </a>
-        <div class="hidden md:flex space-x-6 text-white">
-            <a href="index.html" class="nav-link hover:text-[var(--primary-color)] transition">Home</a>
-            <a href="#grid-gallery" class="nav-link hover:text-[var(--primary-color)] transition">Gallery</a>
-            <a href="#portrait-gallery" class="nav-link hover:text-[var(--primary-color)] transition">Portraits</a>
-            <a href="#contact" class="nav-link hover:text-[var(--primary-color)] transition">Contact</a>
-        </div>
-        <div class="md:hidden relative">
-            <button id="menu-btn" class="text-white text-2xl focus:outline-none">
-                <i class="fas fa-bars"></i>
-            </button>
-            <!-- Mobile Menu -->
-            <div id="mobile-menu" class="mobile-menu absolute right-0 top-full mt-2 w-56 bg-black bg-opacity-90 backdrop-blur-sm rounded-lg shadow-lg">
-                <div class="text-right p-4">
-                    <button id="mobile-menu-close" class="text-white text-2xl focus:outline-none">
-                        <i class="fas fa-times"></i>
-                    </button>
-                </div>
-                <ul class="mt-8 space-y-6 text-white text-lg pl-4">
-                    <li><a href="#hero" class="block py-2 hover:text-[var(--primary-color)] transition">Home</a></li>
-                    <li><a href="#featured" class="block py-2 hover:text-[var(--primary-color)] transition">Featured</a></li>
-                    <li><a href="#grid-gallery" class="block py-2 hover:text-[var(--primary-color)] transition">Gallery</a></li>
-                    <li><a href="#portrait-gallery" class="block py-2 hover:text-[var(--primary-color)] transition">Portraits</a></li>
-                    <li><a href="#contact" class="block py-2 hover:text-[var(--primary-color)] transition">Contact</a></li>
-                </ul>
+    <nav class="fixed top-0 left-0 w-full z-50 bg-black bg-opacity-90 backdrop-blur-sm">
+        <div class="container mx-auto px-4 py-3 flex justify-between items-center">
+            <a href="index.html" class="flex items-center space-x-2">
+                <img src="images/logo.jpg" alt="Bless Africa Logo" class="h-10 w-10 rounded-full object-cover">
+                <span class="text-xl font-bold text-white logo-text"><span class="text-[var(--primary-color)]">BLESS</span>AFRICA</span>
+            </a>
+            <div class="hidden md:flex space-x-6 text-white">
+                <a href="index.html" class="nav-link hover:text-[var(--primary-color)] transition">Home</a>
+                <a href="#grid-gallery" class="nav-link hover:text-[var(--primary-color)] transition">Gallery</a>
+                <a href="#portrait-gallery" class="nav-link hover:text-[var(--primary-color)] transition">Portraits</a>
+                <a href="#contact" class="nav-link hover:text-[var(--primary-color)] transition">Contact</a>
+            </div>
+            <div class="md:hidden">
+                <button id="menu-btn" class="text-white text-2xl focus:outline-none">
+                    <i class="fas fa-bars"></i>
+                </button>
             </div>
         </div>
-    </div>
-</nav>
-    <!-- Mobile Menu Backdrop -->
-    <div class="mobile-menu-backdrop" id="mobile-menu-backdrop"></div>
-    <!-- Mobile Slide-in Menu -->
-    <div class="mobile-menu" id="mobile-menu">
-        <div class="text-right">
+    </nav>
+
+    <!-- Mobile Menu Sidebar -->
+    <div id="mobile-menu" class="mobile-menu">
+        <div class="p-4">
             <button id="mobile-menu-close" class="text-white text-2xl focus:outline-none">
                 <i class="fas fa-times"></i>
             </button>
@@ -383,6 +356,7 @@
             <li><a href="#contact" class="block py-2 hover:text-[var(--primary-color)] transition">Contact</a></li>
         </ul>
     </div>
+
     <!-- Hero Section -->
     <section id="hero">
         <div class="hero-overlay"></div>
@@ -400,6 +374,7 @@
             </div>
         </div>
     </section>
+
     <!-- Gallery Title Section -->
     <section class="py-16 text-center">
         <div class="container mx-auto px-4">
@@ -407,6 +382,7 @@
             <p class="text-xl text-gray-300 max-w-3xl mx-auto">Explore our collection of stunning photography that captures the essence of every moment. From weddings to portraits, each image tells a unique story.</p>
         </div>
     </section>
+
     <!-- Grid Gallery -->
     <section id="grid-gallery" class="gallery-section bg-gray-800">
         <div class="container mx-auto px-4">
@@ -471,6 +447,7 @@
             </div>
         </div>
     </section>
+
     <!-- Portrait Gallery -->
     <section id="portrait-gallery" class="gallery-section">
         <div class="container mx-auto px-4">
@@ -535,6 +512,7 @@
             </div>
         </div>
     </section>
+
     <!-- Contact Section -->
     <section id="contact" class="py-20 px-6 bg-gray-800">
         <div class="max-w-4xl mx-auto">
@@ -555,6 +533,7 @@
             </form>
         </div>
     </section>
+
     <!-- Footer -->
     <footer class="bg-black py-12 text-center text-gray-500">
         <div class="container mx-auto px-4">
@@ -599,6 +578,7 @@
             <p class="text-sm pt-6 border-t border-gray-800 max-w-2xl mx-auto">&copy; 2025 Bless Africa. All rights reserved. | Professional Photography Studio</p>
         </div>
     </footer>
+
     <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
@@ -606,30 +586,25 @@
         // Mobile menu logic
         const menuBtn = document.getElementById('menu-btn');
         const mobileMenu = document.getElementById('mobile-menu');
-        const backdrop = document.getElementById('mobile-menu-backdrop');
         const closeBtn = document.getElementById('mobile-menu-close');
+
         menuBtn.addEventListener('click', () => {
             mobileMenu.classList.add('active');
-            backdrop.style.display = 'block';
             document.body.style.overflow = 'hidden';
         });
+
         closeBtn.addEventListener('click', () => {
             mobileMenu.classList.remove('active');
-            backdrop.style.display = 'none';
             document.body.style.overflow = 'auto';
         });
-        backdrop.addEventListener('click', () => {
-            mobileMenu.classList.remove('active');
-            backdrop.style.display = 'none';
-            document.body.style.overflow = 'auto';
-        });
+
         document.querySelectorAll('.mobile-menu a').forEach(link => {
             link.addEventListener('click', () => {
                 mobileMenu.classList.remove('active');
-                backdrop.style.display = 'none';
                 document.body.style.overflow = 'auto';
             });
         });
+
         // Hero fade slideshow
         const heroImages = document.querySelectorAll('.hero-image');
         let heroIndex = 0;
@@ -640,6 +615,7 @@
             });
             heroIndex = (heroIndex + 1) % heroImages.length;
         }, 5000);
+
         // Carousel functionality
         function setupTrackCarousel(trackId, slideClass, indicatorId) {
             const track = document.getElementById(trackId);
@@ -649,10 +625,12 @@
             const nextBtn = document.querySelector(`.next-btn[data-carousel="${trackId}"]`);
             let index = 0;
             let isMobile = window.innerWidth < 1024;
+
             function getSlidesPerView() {
                 if (isMobile) return 1;
                 return slideClass === 'grid-slide' ? 3 : 4;
             }
+
             function scrollToSlide(slideIndex) {
                 const spv = getSlidesPerView();
                 const maxIndex = Math.ceil(slides.length / spv) - 1;
@@ -670,23 +648,28 @@
                 }
                 updateIndicators();
             }
+
             function prevSlide() {
                 scrollToSlide(index - 1);
             }
+
             function nextSlide() {
                 scrollToSlide(index + 1);
             }
+
             function updateIndicators() {
                 const spv = getSlidesPerView();
                 indicators.forEach((ind, i) => {
                     ind.classList.toggle('active', i === index);
                 });
             }
+
             prevBtn.addEventListener('click', prevSlide);
             nextBtn.addEventListener('click', nextSlide);
             indicators.forEach((indicator, i) => {
                 indicator.addEventListener('click', () => scrollToSlide(i));
             });
+
             window.addEventListener('resize', () => {
                 const wasMobile = isMobile;
                 isMobile = window.innerWidth < 1024;
@@ -696,8 +679,10 @@
                     scrollToSlide(index);
                 }
             });
+
             scrollToSlide(index);
         }
+
         setupTrackCarousel('grid-carousel', 'grid-slide', 'grid-indicators');
         setupTrackCarousel('portrait-carousel', 'portrait-slide', 'portrait-indicators');
     </script>
