--- a/gallery.html
+++ b/gallery.html
@@ -366,8 +366,7 @@
             </button>
         </div>
         <ul class="mt-8 space-y-6 text-white text-lg pl-4">
-            <li><a href="#hero" class="block py-2 hover:text-[var(--primary-color)] transition">Home</a></li>
-            <li><a href="#featured" class="block py-2 hover:text-[var(--primary-color)] transition">Featured</a></li>
+            <li><a href="index.html" class="block py-2 hover:text-[var(--primary-color)] transition">Home</a></li>
             <li><a href="#grid-gallery" class="block py-2 hover:text-[var(--primary-color)] transition">Gallery</a></li>
             <li><a href="#portrait-gallery" class="block py-2 hover:text-[var(--primary-color)] transition">Portraits</a></li>
             <li><a href="#contact" class="block py-2 hover:text-[var(--primary-color)] transition">Contact</a></li>
@@ -581,7 +580,6 @@
                 <div>
                     <h3 class="text-white text-lg font-semibold mb-4">Quick Links</h3>
                     <p class="mb-2"><a href="#hero" class="hover:text-[var(--primary-color)] transition">Home</a></p>
-                    <p class="mb-2"><a href="#featured" class="hover:text-[var(--primary-color)] transition">Featured</a></p>
                     <p class="mb-2"><a href="#grid-gallery" class="hover:text-[var(--primary-color)] transition">Gallery</a></p>
                     <p class="mb-2"><a href="#portrait-gallery" class="hover:text-[var(--primary-color)] transition">Portraits</a></p>
                 </div>
