--- a/index.html
+++ b/index.html
@@ -716,7 +716,10 @@
         
         <!-- Copyright -->
         <div class="border-t border-gray-800 mt-8 pt-8 text-center text-gray-500 text-sm sm:text-base">
-            <p>&copy; 2023 BLESSAFRICA Photography. All rights reserved.</p>
+            <p>&copy; 2023 BLESSAFRICA Photography. All rights reserved : By 
+  <a href="https://www.valoyitech.co.za/" target="_blank" style="color: inherit; text-decoration: underline;">ValoyItech</a>
+</p>
+
         </div>
     </div>
 </footer>
