--- a/gallery.html
+++ b/gallery.html
@@ -590,7 +590,9 @@
                     <p class="mb-2">Sunday: Closed</p>
                 </div>
             </div>
-            <p class="text-sm pt-6 border-t border-gray-800 max-w-2xl mx-auto">&copy; 2025 Bless Africa. All rights reserved. | Professional Photography Studio</p>
+            <p>&copy; 2023 BLESSAFRICA Photography. All rights reserved : By 
+  <a href="https://www.valoyitech.co.za/" target="_blank" style="color: inherit; text-decoration: underline;">ValoyItech</a>
+</p>
         </div>
     </footer>
 
