--- a/gallery.html
+++ b/gallery.html
@@ -533,20 +533,45 @@
     <section id="contact" class="py-20 px-6 bg-gray-800">
         <div class="max-w-4xl mx-auto">
             <h2 class="text-3xl font-bold text-center mb-10">Get In <span class="text-[var(--primary-color)]">Touch</span></h2>
-            <form class="grid grid-cols-1 gap-6 contact-form">
-                <input type="text" placeholder="Your Name" class="bg-gray-900 p-4 rounded-lg border border-gray-700 focus:outline-none focus:ring-2 focus:ring-[var(--primary-color)]">
-                <input type="email" placeholder="Email Address" class="bg-gray-900 p-4 rounded-lg border border-gray-700 focus:outline-none focus:ring-2 focus:ring-[var(--primary-color)]">
-                <input type="tel" placeholder="Phone Number" class="bg-gray-900 p-4 rounded-lg border border-gray-700 focus:outline-none focus:ring-2 focus:ring-[var(--primary-color)]">
-                <select class="bg-gray-900 p-4 rounded-lg border border-gray-700 focus:outline-none focus:ring-2 focus:ring-[var(--primary-color)]">
-                    <option value="">Select Service</option>
-                    <option value="wedding">Wedding Photography</option>
-                    <option value="portrait">Portrait Session</option>
-                    <option value="event">Event Coverage</option>
-                    <option value="commercial">Commercial Photography</option>
-                </select>
-                <textarea placeholder="Your Message" rows="5" class="bg-gray-900 p-4 rounded-lg border border-gray-700 focus:outline-none focus:ring-2 focus:ring-[var(--primary-color)]"></textarea>
-                <button class="btn-primary py-4 text-lg">Send Message</button>
-            </form>
+            <form id="contact-form" class="bg-gray-900 p-8 rounded-lg">
+  <div class="mb-6">
+    <label for="name" class="block mb-2 font-medium">Your Name</label>
+    <input type="text" id="name" name="user_name" class="w-full px-4 py-3 bg-gray-800 border border-gray-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-[var(--primary-color)]" required>
+  </div>
+
+  <div class="mb-6">
+    <label for="email" class="block mb-2 font-medium">Email Address</label>
+    <input type="email" id="email" name="user_email" class="w-full px-4 py-3 bg-gray-800 border border-gray-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-[var(--primary-color)]" required>
+  </div>
+
+  <div class="mb-6">
+    <label for="phone" class="block mb-2 font-medium">Phone Number</label>
+    <input type="tel" id="phone" name="user_phone" class="w-full px-4 py-3 bg-gray-800 border border-gray-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-[var(--primary-color)]">
+  </div>
+
+  <div class="mb-6">
+    <label for="service" class="block mb-2 font-medium">Service Interested In</label>
+    <select id="service" name="user_service" class="w-full px-4 py-3 bg-gray-800 border border-gray-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-[var(--primary-color)]">
+      <option value="">Select a service</option>
+      <option value="wedding">Wedding Photography</option>
+      <option value="portrait">Portrait Session</option>
+      <option value="event">Event Photography</option>
+      <option value="commercial">Commercial Photography</option>
+      <option value="fine-art">Fine Art Prints</option>
+      <option value="workshop">Photography Workshop</option>
+    </select>
+  </div>
+
+  <div class="mb-6">
+    <label for="message" class="block mb-2 font-medium">Your Message</label>
+    <textarea id="message" name="message" rows="5" class="w-full px-4 py-3 bg-gray-800 border border-gray-700 rounded-lg focus:outline-none focus:ring-2 focus:ring-[var(--primary-color)]"></textarea>
+  </div>
+
+  <button type="submit" class="w-full bg-[var(--primary-color)] hover:bg-[var(--primary-color)]/90 text-black font-bold py-3 px-6 rounded-lg transition">
+    Send Message
+  </button>
+</form>
+
         </div>
     </section>
 
@@ -707,5 +732,26 @@
     window.scrollTo(0, 0);
 };
     </script>
+
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+<script>
+  // Initialize EmailJS with your public key
+  emailjs.init("ayHogKIA_vDPIN4IN");
+
+  // Handle form submission
+  document.getElementById('contact-form').addEventListener('submit', function(e) {
+    e.preventDefault();
+
+    emailjs.sendForm('service_3w3oylg', 'template_uwkgb7e', this)
+      .then(function() {
+        alert('Message sent successfully!');
+        document.getElementById('contact-form').reset();
+      }, function(error) {
+        alert('Failed to send message. Please try again later.');
+        console.error('EmailJS error:', error);
+      });
+  });
+</script>
+
 </body>
 </html>
